internal/xds/translator/testdata/out/extension-xds-ir-sublinear/http-route-custom-backends-mixed.routes.yaml
- ignorePortInHostMatching: true
  name: multiple-custom-backends-listener
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /s3:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /s3
                  name: s3-route
                  responseHeadersToAdd:
                  - header:
                      key: mock-extension-was-here-route-name
                      value: s3-route
                  - header:
                      key: mock-extension-was-here-route-hostnames
                      value: '*'
                  - header:
                      key: mock-extension-was-here-extensionRef-name
                      value: inference-pool
                  - header:
                      key: mock-extension-was-here-extensionRef-namespace
                  - header:
                      key: mock-extension-was-here-extensionRef-kind
                      value: InferencePool
                  - header:
                      key: mock-extension-was-here-extensionRef-apiversion
                      value: inference.networking.x-k8s.io/v1alpha2
                  route:
                    cluster: custom-backend-dest
                    upgradeConfigs:
                    - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /s3/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /s3
                      name: s3-route
                      responseHeadersToAdd:
                      - header:
                          key: mock-extension-was-here-route-name
                          value: s3-route
                      - header:
                          key: mock-extension-was-here-route-hostnames
                          value: '*'
                      - header:
                          key: mock-extension-was-here-extensionRef-name
                          value: inference-pool
                      - header:
                          key: mock-extension-was-here-extensionRef-namespace
                      - header:
                          key: mock-extension-was-here-extensionRef-kind
                          value: InferencePool
                      - header:
                          key: mock-extension-was-here-extensionRef-apiversion
                          value: inference.networking.x-k8s.io/v1alpha2
                      route:
                        cluster: custom-backend-dest
                        upgradeConfigs:
                        - upgradeType: websocket
    name: multiple-custom-backends-listener/*
