internal/xds/translator/testdata/out/extension-xds-ir-sublinear/http-route.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        - name: test
          stringMatch:
            suffix: end
        prefix: /
        queryParameters:
        - name: debug
          stringMatch:
            exact: "yes"
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
