internal/xds/translator/testdata/out/extension-xds-ir-sublinear/post-translate-listeners-routes.routes.yaml
- ignorePortInHostMatching: true
  name: test-listener-modify
  virtualHosts:
  - domains:
    - '*'
    name: test-listener-modify/*
    routes:
    - match:
        prefix: /
      name: test-route-modify
      route:
        cluster: test-route-dest
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: second-listener
  virtualHosts:
  - domains:
    - example.com
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /api:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /api
                  name: second-route
                  route:
                    cluster: second-route-dest
                    upgradeConfigs:
                    - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /api/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /api
                      name: second-route
                      route:
                        cluster: second-route-dest
                        upgradeConfigs:
                        - upgradeType: websocket
    name: second-listener/example_com
- name: extension-injected-route
  responseHeadersToAdd:
  - header:
      key: x-extension-injected
      value: route
