internal/xds/translator/testdata/out/extension-xds-ir-sublinear/http-route-extension-route-error.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: extension-post-xdsroute-hook-error
      route:
        cluster: extension-post-xdsroute-hook-error-dest
        upgradeConfigs:
        - upgradeType: websocket
