internal/xds/translator/testdata/out/extension-xds-ir-sublinear/multiple-listeners-same-port-error.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener-error
  virtualHosts:
  - domains:
    - '*'
    name: first-listener-error/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: second-listener
  virtualHosts:
  - domains:
    - '*'
    name: second-listener/*
    routes:
    - match:
        prefix: /
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
